syntax = "proto3";

package com.tmdad.app.server;

option java_package = "com.tmdad.app.group";
option java_multiple_files = true;

message GroupGRPC {
    string name = 1;
    string description = 2;
    repeated string user = 3;
}

message GroupMessage {
    string groupMessage=1;
}

message AddUserGroup{
    string groupName = 1;
    string userName = 2;
}

service GroupService {

    rpc CreateGroup(GroupGRPC) returns (GroupMessage) { }

    rpc AddUser(AddUserGroup) returns(GroupMessage){}

}